Fixed bleeding an made grid responsive ✨

--- a/Kollektiva/resources/sass/done.scss
+++ b/Kollektiva/resources/sass/done.scss
@@ -6,6 +6,10 @@
     justify-content: center;
     align-items: center;
     animation: done 3s;
+
+    button {
+        margin: 1rem;
+    }
 }
 
 @keyframes done {
