--- a/Kollektiva/resources/sass/matchmaking.scss
+++ b/Kollektiva/resources/sass/matchmaking.scss
@@ -3,6 +3,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    h2 {
+        text-align: center;
+    }
+
     .find-residence-section {
         width: 100%;
         margin-top: 2rem;
